--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.2.0",
 	"appid": "wxc5155f939922f354",
-	"projectname": "MiniProgram",
+	"projectname": "wechat-news",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
